--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pagination",
+  "name": "paginationkubra",
   "version": "1.0.0",
   "description": "react pagination",
   "author": "KubraGoktas",
